--- a/notebooks/distilroberta-text-classification.ipynb
+++ b/notebooks/distilroberta-text-classification.ipynb
@@ -3386,7 +3386,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "\n",
         "print(\"Classification report: \\n\\n\", classification_report(gold, prediction))"
       ],
@@ -3395,9 +3395,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B_hc22B2j04O",
-        "outputId": "8c3d7eb1-1154-47f7-a21c-595872d12647"
+        "outputId": "2708fb46-5d22-49fb-b941-3eff962240eb"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -3421,13 +3421,26 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(confusion_matrix(gold, prediction))"
       ],
       "metadata": {
-        "id": "GMEwPRGmyy8r"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GMEwPRGmyy8r",
+        "outputId": "56c588f5-e95e-40e6-ac09-fbcaceb6746c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6384  117]\n",
+            " [ 160  154]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
